Remove branding color

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -19,9 +19,9 @@ html {
   --color-text-inverted: var(--color-bg);
   --color-bg-inverted: var(--color-text);
 
-  --color-brand: #30b27b;
-  --color-brand-hover: #1e9565;
-  --color-brand-active: #177955;
+  --color-brand: #d68914;
+  --color-brand-hover: #b97713;
+  --color-brand-active: #945e0d;
   --color-brand-inverted: #ffffff;
 
   --tab-underline-hovered: #e2e8f0;
@@ -112,9 +112,9 @@ html {
   --color-text-inverted: var(--color-bg);
   --color-bg-inverted: var(--color-text);
 
-  --color-brand: #1bd96a;
-  --color-brand-hover: #2de391;
-  --color-brand-active: #55f5ae;
+  --color-brand: #d68914;
+  --color-brand-hover: #d1963e;
+  --color-brand-active: #cca468;
   --color-brand-inverted: #000;
 
   --tab-underline-hovered: #414146;
